--- a/Sign up/Signup.html
+++ b/Sign up/Signup.html
@@ -49,8 +49,8 @@
 </head>
 <body>
 
-<form action="submit_registration.php" method="POST">
-    <h2>Registration</h2>
+<form action="ebuchiyYII2.php" method="POST">
+    <h2 style="text-align: center;">Регистрация</h2>
     <input type="text" name="fullname" placeholder="Ваше ФИО" required>
     <input type="email" name="email" placeholder="Ваша почта" required>
     <input type="password" name="password" placeholder="Ваш пароль" required>
